Add coin functions
- coin_insert
- box_amount
- coins_number
