# api/swagger/swagger.yaml
@@ -1,12 +1,12 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Hello World App
+  title: box-rest
 # during dev, should point to your local machine
 host: localhost:10010
-# basePath prefixes all resource paths 
+# basePath prefixes all resource paths
 basePath: /
-# 
+#
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -42,6 +42,64 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /coin_insert:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: coin
+    post:
+      description: Store inserted coin value
+      # used as the method name of the controller
+      operationId: coin_insert
+      parameters:
+        - name: coin_value
+          in: query
+          description: This is the coin inserted value
+          required: true
+          type: number
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/CoinResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /box_amount:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: coin
+    get:
+      description: Return box amount
+      # used as the method name of the controller
+      operationId: box_amount
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/BoxAmount"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /coins_number:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: coin
+    get:
+      description: Return coins value number
+      # used as the method name of the controller
+      operationId: coins_number
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/CoinsNumber"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -52,6 +110,45 @@ definitions:
     properties:
       message:
         type: string
+  CoinResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
+  BoxAmount:
+    type: object
+    properties:
+      amount:
+        type: integer
+        description: The box amount value
+  CoinsNumber:
+    type: object
+    properties:
+      0.01:
+        type: integer
+        description: The count of 0.01 coin
+      0.02:
+        type: integer
+        description: The count of 0.02 coin
+      0.05:
+        type: integer
+        description: The count of 0.05 coin
+      0.10:
+        type: integer
+        description: The count of 0.10 coin
+      0.20:
+        type: integer
+        description: The count of 0.20 coin
+      0.50:
+        type: integer
+        description: The count of 0.50 coin
+      1.00:
+        type: integer
+        description: The count of 1.00 coin
+      2.00:
+        type: integer
+        description: The count of 2.00 coin
   ErrorResponse:
     required:
       - message
